# StyleTTS2FineTune

./: .gitignore  README.md  flake.nix  prepare.ipynb  pyproject.toml  shell.nix.bak  transcribe.sh  transcribe_madmonq.sh  transcribe_umbra.sh
madmonq/: madmonq_denoised_normalized.json  madmonq_denoised_normalized.srt  madmonq_denoised_normalized.tsv  madmonq_denoised_normalized.txt  madmonq_denoised_normalized.vtt
prepare_wavs/: README.md  cleanse.go  convert.go  craft_dataset.go  denoise.go  dl.go  dl_yt.go  find_overlaps.py  go.mod  go.sum  main.go  normalize.go  segmentize.go  split.go  whisper.go  youtube-dl
